--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name="atchley.chris.dailyjoke.android.AndroidLauncher"
             android:label="@string/app_name" 
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
